Translations by sujato to translation/en/sujato/sutta/mn/mn82_translation-en-sujato.json

--- a/translation/en/sujato/sutta/mn/mn82_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/mn/mn82_translation-en-sujato.json
@@ -370,7 +370,7 @@
   "mn82:41.30": "",
   "mn82:41.31": "",
   "mn82:41.32": "What would you do?” ",
-  "mn82:41.33": "“I would conquer it and dwell there.” ",
+  "mn82:41.33": "“I would conquer it and reign over it.” ",
   "mn82:41.34": "“This is what the Buddha was referring to when he said: ",
   "mn82:41.35": "‘The world is wanting, insatiable, the slave of craving.’ ",
   "mn82:41.36": "And it was after knowing and seeing and hearing this that I went forth from the lay life to homelessness.” ",
