Translations by sujato to translation/en/sujato/sutta/mn/mn82_translation-en-sujato.json

--- a/translation/en/sujato/sutta/mn/mn82_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/mn/mn82_translation-en-sujato.json
@@ -420,7 +420,7 @@
   "mn82:42.40": "will transmigrate from one life to the next. ",
   "mn82:42.41": "While someone of little wisdom, <j>placing faith in them, ",
   "mn82:42.42": "also enters a womb and the world beyond. ",
-  "mn82:42.43": "As a bandit caught in the door ",
+  "mn82:42.43": "As a bandit caught in a window ",
   "mn82:42.44": "is punished for his own bad deeds; ",
   "mn82:42.45": "so after departing, in the world beyond, ",
   "mn82:42.46": "people are punished for their own bad deeds. ",
