Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn131_translation-de-sabbamitta.json
@@ -69,7 +69,7 @@
   "mn131:10.12": "mit dem Tod und seinem mächtigen Heer. ",
   "mn131:10.13": "Der friedvolle Abgeklärte erklärte es: ",
   "mn131:10.14": "Die so voll Eifer meditieren, ",
-  "mn131:10.15": "sie haben wahrhaftig diese eine erlesene Nacht – ",
+  "mn131:10.15": "unermüdlich bei Tag und Nacht, ",
   "mn131:10.16": "das erklärte der friedvolle Abgeklärte. ",
   "mn131:11.1": "Das meinte ich, als ich sagte: ‚Ich will euch den Merksatz zum Aufsagen und die Aufgliederung über eine erlesene Nacht lehren.‘“ ",
   "mn131:11.3": "Das sagte der Buddha. ",
