Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
@@ -1,3 +1,4 @@
 {
-  "mn132:0.1": "Mittlere Lehrreden 132 "
+  "mn132:0.1": "Mittlere Lehrreden 132 ",
+  "mn132:0.2": "Ānanda und eine erlesene Nacht "
 }
