--- a/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
@@ -1,4 +1,5 @@
 {
   "mn132:0.1": "Mittlere Lehrreden 132 ",
-  "mn132:0.2": "Ānanda und eine erlesene Nacht "
+  "mn132:0.2": "Ānanda und eine erlesene Nacht ",
+  "mn132:1.1": "So habe ich es gehört: "
 }
