Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
@@ -1,5 +1,6 @@
 {
   "mn132:0.1": "Mittlere Lehrreden 132 ",
   "mn132:0.2": "Ānanda und eine erlesene Nacht ",
-  "mn132:1.1": "So habe ich es gehört: "
+  "mn132:1.1": "So habe ich es gehört: ",
+  "mn132:1.2": "Einmal hielt sich der Buddha bei Sāvatthī in Jetas Wäldchen auf, dem Kloster des Anāthapiṇḍika. "
 }
