--- a/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
@@ -3,5 +3,6 @@
   "mn132:0.2": "Ānanda und eine erlesene Nacht ",
   "mn132:1.1": "So habe ich es gehört: ",
   "mn132:1.2": "Einmal hielt sich der Buddha bei Sāvatthī in Jetas Wäldchen auf, dem Kloster des Anāthapiṇḍika. ",
-  "mn132:2.1": "Da nun leitete der Ehrwürdige Ānanda die Mönche und Nonnen in der Versammlungshalle mit einem Dhammavortrag über den Merksatz zum Aufsagen und die Aufgliederung über eine erlesene Nacht an, ermunterte sie, begeisterte sie und regte sie an. "
+  "mn132:2.1": "Da nun leitete der Ehrwürdige Ānanda die Mönche und Nonnen in der Versammlungshalle mit einem Dhammavortrag über den Merksatz zum Aufsagen und die Aufgliederung über eine erlesene Nacht an, ermunterte sie, begeisterte sie und regte sie an. ",
+  "mn132:2.2": "Da kam der Buddha am späten Nachmittag aus seiner Klausur, ging zur Versammlungshalle, setzte sich auf den ausgebreiteten Sitz "
 }
