Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
@@ -6,5 +6,6 @@
   "mn132:2.1": "Da nun leitete der Ehrwürdige Ānanda die Mönche und Nonnen in der Versammlungshalle mit einem Dhammavortrag über den Merksatz zum Aufsagen und die Aufgliederung über eine erlesene Nacht an, ermunterte sie, begeisterte sie und regte sie an. ",
   "mn132:2.2": "Da kam der Buddha am späten Nachmittag aus seiner Klausur, ging zur Versammlungshalle, setzte sich auf den ausgebreiteten Sitz ",
   "mn132:2.3": "und wandte sich an die Mönche und Nonnen: ",
-  "mn132:2.4": "„Wer hat die Mönche und Nonnen in der Versammlungshalle mit einem Dhammavortrag über den Merksatz zum Aufsagen und die Aufgliederung über eine erlesene Nacht angeleitet?“ "
+  "mn132:2.4": "„Wer hat die Mönche und Nonnen in der Versammlungshalle mit einem Dhammavortrag über den Merksatz zum Aufsagen und die Aufgliederung über eine erlesene Nacht angeleitet?“ ",
+  "mn132:2.5": "„Es war der Ehrwürdige Ānanda, Herr.“ "
 }
