Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
@@ -9,5 +9,6 @@
   "mn132:2.4": "„Wer hat die Mönche und Nonnen in der Versammlungshalle mit einem Dhammavortrag über den Merksatz zum Aufsagen und die Aufgliederung über eine erlesene Nacht angeleitet?“ ",
   "mn132:2.5": "„Es war der Ehrwürdige Ānanda, Herr.“ ",
   "mn132:2.6": "Da sagte der Buddha zum Ehrwürdigen Ānanda: ",
-  "mn132:2.7": "„Aber in welcher Weise hast du die Mönche und Nonnen in der Versammlungshalle mit einem Dhammavortrag über den Merksatz zum Aufsagen und die Aufgliederung über eine erlesene Nacht angeleitet?“ "
+  "mn132:2.7": "„Aber in welcher Weise hast du die Mönche und Nonnen in der Versammlungshalle mit einem Dhammavortrag über den Merksatz zum Aufsagen und die Aufgliederung über eine erlesene Nacht angeleitet?“ ",
+  "mn132:3.1": "„Ich tat es so, Herr:“, antwortete Ānanda. "
 }
