--- a/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
@@ -12,5 +12,6 @@
   "mn132:2.7": "„Aber in welcher Weise hast du die Mönche und Nonnen in der Versammlungshalle mit einem Dhammavortrag über den Merksatz zum Aufsagen und die Aufgliederung über eine erlesene Nacht angeleitet?“ ",
   "mn132:3.1": "„Ich tat es so, Herr:“, antwortete Ānanda. ",
   "mn132:3.2": "„Wendet euch nicht zu Vergangenem zurück, ",
-  "mn132:3.3": "hofft nicht auf das Künftige. "
+  "mn132:3.3": "hofft nicht auf das Künftige. ",
+  "mn132:3.4": "Was vergangen ist, wurde aufgegeben, "
 }
