--- a/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
@@ -13,5 +13,6 @@
   "mn132:3.1": "„Ich tat es so, Herr:“, antwortete Ānanda. ",
   "mn132:3.2": "„Wendet euch nicht zu Vergangenem zurück, ",
   "mn132:3.3": "hofft nicht auf das Künftige. ",
-  "mn132:3.4": "Was vergangen ist, wurde aufgegeben, "
+  "mn132:3.4": "Was vergangen ist, wurde aufgegeben, ",
+  "mn132:3.5": "die Zukunft ist noch nicht gekommen, "
 }
