Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
@@ -14,5 +14,6 @@
   "mn132:3.2": "„Wendet euch nicht zu Vergangenem zurück, ",
   "mn132:3.3": "hofft nicht auf das Künftige. ",
   "mn132:3.4": "Was vergangen ist, wurde aufgegeben, ",
-  "mn132:3.5": "die Zukunft ist noch nicht gekommen, "
+  "mn132:3.5": "die Zukunft ist noch nicht gekommen, ",
+  "mn132:3.6": "und gegenwärtige Erscheinungen "
 }
