--- a/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
@@ -15,5 +15,6 @@
   "mn132:3.3": "hofft nicht auf das Künftige. ",
   "mn132:3.4": "Was vergangen ist, wurde aufgegeben, ",
   "mn132:3.5": "die Zukunft ist noch nicht gekommen, ",
-  "mn132:3.6": "und gegenwärtige Erscheinungen "
+  "mn132:3.6": "und gegenwärtige Erscheinungen ",
+  "mn132:3.7": "sieht man klar in jedem Fall. "
 }
