Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
@@ -16,5 +16,6 @@
   "mn132:3.4": "Was vergangen ist, wurde aufgegeben, ",
   "mn132:3.5": "die Zukunft ist noch nicht gekommen, ",
   "mn132:3.6": "und gegenwärtige Erscheinungen ",
-  "mn132:3.7": "sieht man klar in jedem Fall. "
+  "mn132:3.7": "sieht man klar in jedem Fall. ",
+  "mn132:3.8": "Wenn ihr das erkennt, pflegt es – "
 }
