--- a/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
@@ -17,5 +17,6 @@
   "mn132:3.5": "die Zukunft ist noch nicht gekommen, ",
   "mn132:3.6": "und gegenwärtige Erscheinungen ",
   "mn132:3.7": "sieht man klar in jedem Fall. ",
-  "mn132:3.8": "Wenn ihr das erkennt, pflegt es – "
+  "mn132:3.8": "Wenn ihr das erkennt, pflegt es – ",
+  "mn132:3.9": "ohne zu wanken, unerschütterlich. "
 }
