--- a/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
@@ -19,5 +19,6 @@
   "mn132:3.7": "sieht man klar in jedem Fall. ",
   "mn132:3.8": "Wenn ihr das erkennt, pflegt es – ",
   "mn132:3.9": "ohne zu wanken, unerschütterlich. ",
-  "mn132:3.10": "Heute ist der Tag, um sich anzustrengen; "
+  "mn132:3.10": "Heute ist der Tag, um sich anzustrengen; ",
+  "mn132:3.11": "wer weiß, ob morgen der Tod kommt! "
 }
