Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
@@ -20,5 +20,6 @@
   "mn132:3.8": "Wenn ihr das erkennt, pflegt es – ",
   "mn132:3.9": "ohne zu wanken, unerschütterlich. ",
   "mn132:3.10": "Heute ist der Tag, um sich anzustrengen; ",
-  "mn132:3.11": "wer weiß, ob morgen der Tod kommt! "
+  "mn132:3.11": "wer weiß, ob morgen der Tod kommt! ",
+  "mn132:3.12": "Denn es gibt kein Feilschen "
 }
