--- a/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
@@ -21,5 +21,6 @@
   "mn132:3.9": "ohne zu wanken, unerschütterlich. ",
   "mn132:3.10": "Heute ist der Tag, um sich anzustrengen; ",
   "mn132:3.11": "wer weiß, ob morgen der Tod kommt! ",
-  "mn132:3.12": "Denn es gibt kein Feilschen "
+  "mn132:3.12": "Denn es gibt kein Feilschen ",
+  "mn132:3.13": "mit dem Tod und seinem mächtigen Heer. "
 }
