Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
@@ -25,5 +25,6 @@
   "mn132:3.13": "mit dem Tod und seinem mächtigen Heer. ",
   "mn132:3.14": "Der friedvolle Abgeklärte erklärte es: ",
   "mn132:3.15": "Die so voll Eifer meditieren, ",
-  "mn132:3.16": "unermüdlich bei Tag und Nacht, "
+  "mn132:3.16": "unermüdlich bei Tag und Nacht, ",
+  "mn132:3.17": "sie haben wahrhaftig diese eine erlesene Nacht.“ "
 }
