--- a/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
@@ -26,5 +26,6 @@
   "mn132:3.14": "Der friedvolle Abgeklärte erklärte es: ",
   "mn132:3.15": "Die so voll Eifer meditieren, ",
   "mn132:3.16": "unermüdlich bei Tag und Nacht, ",
-  "mn132:3.17": "sie haben wahrhaftig diese eine erlesene Nacht.“ "
+  "mn132:3.17": "sie haben wahrhaftig diese eine erlesene Nacht.“ ",
+  "mn132:4.1": "Und wie, Geehrte, wendet man sich zu Vergangenem zurück? "
 }
