--- a/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
@@ -29,5 +29,6 @@
   "mn132:3.17": "sie haben wahrhaftig diese eine erlesene Nacht.“ ",
   "mn132:4.1": "Und wie, Geehrte, wendet man sich zu Vergangenem zurück? ",
   "mn132:4.2": "‚Ich hatte solche Form in der Vergangenheit‘ … ‚Ich hatte solches Gefühl … solche Wahrnehmung … solche Entscheidungen … solches Bewusstsein in der Vergangenheit‘, dafür bringt man Entzücken auf. ",
-  "mn132:4.3": "So wendet man sich zu Vergangenem zurück. "
+  "mn132:4.3": "So wendet man sich zu Vergangenem zurück. ",
+  "mn132:5.1": "Und wie wendet man sich nicht zu Vergangenem zurück? "
 }
