--- a/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
@@ -31,5 +31,6 @@
   "mn132:4.2": "‚Ich hatte solche Form in der Vergangenheit‘ … ‚Ich hatte solches Gefühl … solche Wahrnehmung … solche Entscheidungen … solches Bewusstsein in der Vergangenheit‘, dafür bringt man Entzücken auf. ",
   "mn132:4.3": "So wendet man sich zu Vergangenem zurück. ",
   "mn132:5.1": "Und wie wendet man sich nicht zu Vergangenem zurück? ",
-  "mn132:5.2": "‚Ich hatte solche Form in der Vergangenheit‘ … ‚Ich hatte solches Gefühl … solche Wahrnehmung … solche Entscheidungen … solches Bewusstsein in der Vergangenheit‘, dafür bringt man kein Entzücken auf. "
+  "mn132:5.2": "‚Ich hatte solche Form in der Vergangenheit‘ … ‚Ich hatte solches Gefühl … solche Wahrnehmung … solche Entscheidungen … solches Bewusstsein in der Vergangenheit‘, dafür bringt man kein Entzücken auf. ",
+  "mn132:5.3": "So wendet man sich nicht zu Vergangenem zurück. "
 }
