--- a/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
@@ -33,5 +33,6 @@
   "mn132:5.1": "Und wie wendet man sich nicht zu Vergangenem zurück? ",
   "mn132:5.2": "‚Ich hatte solche Form in der Vergangenheit‘ … ‚Ich hatte solches Gefühl … solche Wahrnehmung … solche Entscheidungen … solches Bewusstsein in der Vergangenheit‘, dafür bringt man kein Entzücken auf. ",
   "mn132:5.3": "So wendet man sich nicht zu Vergangenem zurück. ",
-  "mn132:6.1": "Und wie hofft man auf das Künftige? "
+  "mn132:6.1": "Und wie hofft man auf das Künftige? ",
+  "mn132:6.2": "‚Dass ich doch solche Form in der Zukunft hätte‘ … ‚Dass ich doch solches Gefühl … solche Wahrnehmung … solche Entscheidungen … solches Bewusstsein in der Zukunft hätte‘, dafür bringt man Entzücken auf. "
 }
