--- a/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
@@ -35,5 +35,6 @@
   "mn132:5.3": "So wendet man sich nicht zu Vergangenem zurück. ",
   "mn132:6.1": "Und wie hofft man auf das Künftige? ",
   "mn132:6.2": "‚Dass ich doch solche Form in der Zukunft hätte‘ … ‚Dass ich doch solches Gefühl … ",
-  "mn132:6.3": "solche Wahrnehmung … "
+  "mn132:6.3": "solche Wahrnehmung … ",
+  "mn132:6.4": "solche Entscheidungen … "
 }
