--- a/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
@@ -36,5 +36,6 @@
   "mn132:6.1": "Und wie hofft man auf das Künftige? ",
   "mn132:6.2": "‚Dass ich doch solche Form in der Zukunft hätte‘ … ‚Dass ich doch solches Gefühl … ",
   "mn132:6.3": "solche Wahrnehmung … ",
-  "mn132:6.4": "solche Entscheidungen … "
+  "mn132:6.4": "solche Entscheidungen … ",
+  "mn132:6.5": "solches Bewusstsein in der Zukunft hätte‘, dafür bringt man Entzücken auf. "
 }
