Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
@@ -38,5 +38,6 @@
   "mn132:6.3": "solche Wahrnehmung … ",
   "mn132:6.4": "solche Entscheidungen … ",
   "mn132:6.5": "solches Bewusstsein in der Zukunft hätte‘, dafür bringt man Entzücken auf. ",
-  "mn132:6.6": "So hofft man auf das Künftige. "
+  "mn132:6.6": "So hofft man auf das Künftige. ",
+  "mn132:7.1": "Und wie hofft man nicht auf das Künftige? "
 }
