--- a/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
@@ -41,5 +41,6 @@
   "mn132:6.6": "So hofft man auf das Künftige. ",
   "mn132:7.1": "Und wie hofft man nicht auf das Künftige? ",
   "mn132:7.2": "‚Dass ich doch solche Form in der Zukunft hätte‘ … ‚Dass ich doch solches Gefühl … ",
-  "mn132:7.3": "solche Wahrnehmung … "
+  "mn132:7.3": "solche Wahrnehmung … ",
+  "mn132:7.4": "solche Entscheidungen … "
 }
