--- a/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
@@ -44,5 +44,6 @@
   "mn132:7.3": "solche Wahrnehmung … ",
   "mn132:7.4": "solche Entscheidungen … ",
   "mn132:7.5": "solches Bewusstsein in der Zukunft hätte‘, dafür bringt man Entzücken auf. ",
-  "mn132:7.6": "So hofft man nicht auf das Künftige. "
+  "mn132:7.6": "So hofft man nicht auf das Künftige. ",
+  "mn132:8.1": "Und wie wankt man inmitten gegenwärtiger Erscheinungen? "
 }
