Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
@@ -45,5 +45,6 @@
   "mn132:7.4": "solche Entscheidungen … ",
   "mn132:7.5": "solches Bewusstsein in der Zukunft hätte‘, dafür bringt man Entzücken auf. ",
   "mn132:7.6": "So hofft man nicht auf das Künftige. ",
-  "mn132:8.1": "Und wie wankt man inmitten gegenwärtiger Erscheinungen? "
+  "mn132:8.1": "Und wie wankt man inmitten gegenwärtiger Erscheinungen? ",
+  "mn132:8.2": "Da hat ein ungebildeter gewöhnlicher Mensch die Edlen nicht gesehen und ist in der Lehre der Edlen nicht bewandert und geschult. Er hat keine wahren Menschen gesehen und ist in der Lehre der wahren Menschen nicht bewandert und geschult. "
 }
