--- a/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
@@ -48,5 +48,6 @@
   "mn132:8.1": "Und wie wankt man inmitten gegenwärtiger Erscheinungen? ",
   "mn132:8.2": "Da hat ein ungebildeter gewöhnlicher Mensch die Edlen nicht gesehen und ist in der Lehre der Edlen nicht bewandert und geschult. Er hat keine wahren Menschen gesehen und ist in der Lehre der wahren Menschen nicht bewandert und geschult. ",
   "mn132:8.3": "Er betrachtet Form als das Selbst, das Selbst als etwas, das Form hat, Form als im Selbst oder das Selbst als in der Form. ",
-  "mn132:8.4": "Er betrachtet Gefühl … "
+  "mn132:8.4": "Er betrachtet Gefühl … ",
+  "mn132:8.5": "Wahrnehmung … "
 }
