--- a/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
@@ -50,5 +50,6 @@
   "mn132:8.3": "Er betrachtet Form als das Selbst, das Selbst als etwas, das Form hat, Form als im Selbst oder das Selbst als in der Form. ",
   "mn132:8.4": "Er betrachtet Gefühl … ",
   "mn132:8.5": "Wahrnehmung … ",
-  "mn132:8.6": "Entscheidungen … "
+  "mn132:8.6": "Entscheidungen … ",
+  "mn132:8.7": "oder Bewusstsein als das Selbst, das Selbst als etwas, das Bewusstsein hat, Bewusstsein als im Selbst oder das Selbst als im Bewusstsein. "
 }
