--- a/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
@@ -52,5 +52,6 @@
   "mn132:8.5": "Wahrnehmung … ",
   "mn132:8.6": "Entscheidungen … ",
   "mn132:8.7": "oder Bewusstsein als das Selbst, das Selbst als etwas, das Bewusstsein hat, Bewusstsein als im Selbst oder das Selbst als im Bewusstsein. ",
-  "mn132:8.8": "So wankt man inmitten gegenwärtiger Erscheinungen. "
+  "mn132:8.8": "So wankt man inmitten gegenwärtiger Erscheinungen. ",
+  "mn132:9.1": "Und wie wankt man nicht inmitten gegenwärtiger Erscheinungen? "
 }
