--- a/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
@@ -54,5 +54,6 @@
   "mn132:8.7": "oder Bewusstsein als das Selbst, das Selbst als etwas, das Bewusstsein hat, Bewusstsein als im Selbst oder das Selbst als im Bewusstsein. ",
   "mn132:8.8": "So wankt man inmitten gegenwärtiger Erscheinungen. ",
   "mn132:9.1": "Und wie wankt man nicht inmitten gegenwärtiger Erscheinungen? ",
-  "mn132:9.2": "Da hat ein gebildeter edler Schüler die Edlen gesehen und ist in der Lehre der Edlen bewandert und geschult. Er hat wahre Menschen gesehen und ist in der Lehre der wahren Menschen bewandert und geschult. "
+  "mn132:9.2": "Da hat ein gebildeter edler Schüler die Edlen gesehen und ist in der Lehre der Edlen bewandert und geschult. Er hat wahre Menschen gesehen und ist in der Lehre der wahren Menschen bewandert und geschult. ",
+  "mn132:9.3": "Er betrachtet nicht Form als das Selbst, das Selbst als etwas, das Form hat, Form als im Selbst oder das Selbst als in der Form. "
 }
