--- a/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
@@ -58,5 +58,6 @@
   "mn132:9.3": "Er betrachtet nicht Form als das Selbst, das Selbst als etwas, das Form hat, Form als im Selbst oder das Selbst als in der Form. ",
   "mn132:9.4": "Er betrachtet nicht Gefühl … ",
   "mn132:9.5": "Wahrnehmung … ",
-  "mn132:9.6": "Entscheidungen … "
+  "mn132:9.6": "Entscheidungen … ",
+  "mn132:9.7": "oder Bewusstsein als das Selbst, das Selbst als etwas, das Bewusstsein hat, Bewusstsein als im Selbst oder das Selbst als im Bewusstsein. "
 }
