--- a/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
@@ -61,5 +61,6 @@
   "mn132:9.6": "Entscheidungen … ",
   "mn132:9.7": "oder Bewusstsein als das Selbst, das Selbst als etwas, das Bewusstsein hat, Bewusstsein als im Selbst oder das Selbst als im Bewusstsein. ",
   "mn132:9.8": "So wankt man nicht inmitten gegenwärtiger Erscheinungen. ",
-  "mn132:10.1": "Wendet euch nicht zu Vergangenem zurück, "
+  "mn132:10.1": "Wendet euch nicht zu Vergangenem zurück, ",
+  "mn132:10.2": "hofft nicht auf das Künftige. "
 }
