Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
@@ -64,5 +64,6 @@
   "mn132:10.1": "Wendet euch nicht zu Vergangenem zurück, ",
   "mn132:10.2": "hofft nicht auf das Künftige. ",
   "mn132:10.3": "Was vergangen ist, wurde aufgegeben, ",
-  "mn132:10.4": "die Zukunft ist noch nicht gekommen, "
+  "mn132:10.4": "die Zukunft ist noch nicht gekommen, ",
+  "mn132:10.5": "und gegenwärtige Erscheinungen "
 }
