--- a/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
@@ -66,5 +66,6 @@
   "mn132:10.3": "Was vergangen ist, wurde aufgegeben, ",
   "mn132:10.4": "die Zukunft ist noch nicht gekommen, ",
   "mn132:10.5": "und gegenwärtige Erscheinungen ",
-  "mn132:10.6": "sieht man klar in jedem Fall. "
+  "mn132:10.6": "sieht man klar in jedem Fall. ",
+  "mn132:10.7": "Wenn ihr das erkennt, pflegt es – "
 }
