--- a/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
@@ -68,5 +68,6 @@
   "mn132:10.5": "und gegenwärtige Erscheinungen ",
   "mn132:10.6": "sieht man klar in jedem Fall. ",
   "mn132:10.7": "Wenn ihr das erkennt, pflegt es – ",
-  "mn132:10.8": "ohne zu wanken, unerschütterlich. "
+  "mn132:10.8": "ohne zu wanken, unerschütterlich. ",
+  "mn132:10.9": "Heute ist der Tag, um sich anzustrengen; "
 }
