--- a/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
@@ -70,5 +70,6 @@
   "mn132:10.7": "Wenn ihr das erkennt, pflegt es – ",
   "mn132:10.8": "ohne zu wanken, unerschütterlich. ",
   "mn132:10.9": "Heute ist der Tag, um sich anzustrengen; ",
-  "mn132:10.10": "wer weiß, ob morgen der Tod kommt! "
+  "mn132:10.10": "wer weiß, ob morgen der Tod kommt! ",
+  "mn132:10.11": "Denn es gibt kein Feilschen "
 }
