--- a/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
@@ -73,5 +73,6 @@
   "mn132:10.10": "wer weiß, ob morgen der Tod kommt! ",
   "mn132:10.11": "Denn es gibt kein Feilschen ",
   "mn132:10.12": "mit dem Tod und seinem mächtigen Heer. ",
-  "mn132:10.13": "Der friedvolle Abgeklärte erklärte es: "
+  "mn132:10.13": "Der friedvolle Abgeklärte erklärte es: ",
+  "mn132:10.14": "Die so voll Eifer meditieren, "
 }
