--- a/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
@@ -77,5 +77,6 @@
   "mn132:10.14": "Die so voll Eifer meditieren, ",
   "mn132:10.15": "unermüdlich bei Tag und Nacht, ",
   "mn132:10.16": "sie haben wahrhaftig diese eine erlesene Nacht. ",
-  "mn132:11.1": "So habe ich die Mönche und Nonnen mit einem Dhammavortrag über den Merksatz zum Aufsagen und die Aufgliederung über eine erlesene Nacht angeleitet.“ "
+  "mn132:11.1": "So habe ich die Mönche und Nonnen mit einem Dhammavortrag über den Merksatz zum Aufsagen und die Aufgliederung über eine erlesene Nacht angeleitet.“ ",
+  "mn132:11.2": "„Gut, gut, Ānanda! "
 }
