--- a/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn132_translation-de-sabbamitta.json
@@ -80,5 +80,6 @@
   "mn132:11.1": "So habe ich die Mönche und Nonnen mit einem Dhammavortrag über den Merksatz zum Aufsagen und die Aufgliederung über eine erlesene Nacht angeleitet.“ ",
   "mn132:11.2": "„Gut, gut, Ānanda! ",
   "mn132:11.3": "Es ist gut, dass du die Mönche und Nonnen mit einem Dhammavortrag über den Merksatz zum Aufsagen und die Aufgliederung über eine erlesene Nacht angeleitet hast.“ ",
-  "mn132:13-19.1": "Und der Buddha wiederholte erneut die Strophen und die Aufgliederung. "
+  "mn132:13-19.1": "Und der Buddha wiederholte erneut die Strophen und die Aufgliederung. ",
+  "mn132:13-19.17": "Das sagte der Buddha. "
 }
