Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -168,5 +168,5 @@
   "mn122:27.3": "wieder und wieder auf euch eindringe. ",
   "mn122:27.4": "Der Kern wird dem standhalten.“ ",
   "mn122:27.5": "Das sagte der Buddha. ",
-  "mn122:27.6": "Zufrieden freute sich der Ehrwürdige Ānanda über die Worte des Buddha. "
+  "mn122:27.6": "Zufrieden begrüßte der Ehrwürdige Ānanda die Worte des Buddha. "
 }
