--- a/translation/de/sabbamitta/sutta/mn/mn81_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn81_translation-de-sabbamitta.json
@@ -195,5 +195,5 @@
   "mn81:23.3": "Aber so solltest du es nicht sehen. ",
   "mn81:23.4": "Ich selbst war damals der Brahmanenschüler Jotipāla.“ ",
   "mn81:23.5": "Das sagte der Buddha. ",
-  "mn81:23.6": "Zufrieden freute sich der Ehrwürdige Ānanda über die Worte des Buddha. "
+  "mn81:23.6": "Zufrieden begrüßte der Ehrwürdige Ānanda die Worte des Buddha. "
 }
