Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn133_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn133_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn133_translation-de-sabbamitta.json
@@ -1,3 +1,4 @@
 {
-  "mn133:0.1": "Mittlere Lehrreden 133 "
+  "mn133:0.1": "Mittlere Lehrreden 133 ",
+  "mn133:0.2": "Mahākaccāna und eine erlesene Nacht "
 }
