--- a/translation/de/sabbamitta/sutta/mn/mn133_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn133_translation-de-sabbamitta.json
@@ -1,4 +1,5 @@
 {
   "mn133:0.1": "Mittlere Lehrreden 133 ",
-  "mn133:0.2": "Mahākaccāna und eine erlesene Nacht "
+  "mn133:0.2": "Mahākaccāna und eine erlesene Nacht ",
+  "mn133:1.1": "So habe ich es gehört: "
 }
