--- a/translation/de/sabbamitta/sutta/mn/mn133_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn133_translation-de-sabbamitta.json
@@ -2,5 +2,6 @@
   "mn133:0.1": "Mittlere Lehrreden 133 ",
   "mn133:0.2": "Mahākaccāna und eine erlesene Nacht ",
   "mn133:1.1": "So habe ich es gehört: ",
-  "mn133:1.2": "Einmal hielt sich der Buddha bei Rājagaha auf, im Kloster der Heißen Quellen. "
+  "mn133:1.2": "Einmal hielt sich der Buddha bei Rājagaha auf, im Kloster der Heißen Quellen. ",
+  "mn133:1.3": "Da stand der Ehrwürdige Samiddhi beim ersten Morgengrauen auf und ging zu den heißen Quellen, um zu baden. "
 }
