--- a/translation/de/sabbamitta/sutta/mn/mn133_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn133_translation-de-sabbamitta.json
@@ -3,5 +3,6 @@
   "mn133:0.2": "Mahākaccāna und eine erlesene Nacht ",
   "mn133:1.1": "So habe ich es gehört: ",
   "mn133:1.2": "Einmal hielt sich der Buddha bei Rājagaha auf, im Kloster der Heißen Quellen. ",
-  "mn133:1.3": "Da stand der Ehrwürdige Samiddhi beim ersten Morgengrauen auf und ging zu den heißen Quellen, um zu baden. "
+  "mn133:1.3": "Da stand der Ehrwürdige Samiddhi beim ersten Morgengrauen auf und ging zu den heißen Quellen, um zu baden. ",
+  "mn133:1.4": "Nach dem Bad, als er aus dem Wasser gestiegen war, stand er in einer Robe da und trocknete sich ab. "
 }
