--- a/translation/de/sabbamitta/sutta/mn/mn133_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn133_translation-de-sabbamitta.json
@@ -8,5 +8,6 @@
   "mn133:1.5": "Da kam spät in der Nacht eine Gottheit, die mit ihrer wunderbaren Schönheit die heißen Quellen weithin erhellte, zu Samiddhi, stellte sich zur Seite hin und sagte zu Samiddhi: ",
   "mn133:2.1": "„Mönch, erinnerst du dich an den Merksatz zum Aufsagen und die Aufgliederung über eine erlesene Nacht?“ ",
   "mn133:2.2": "„Nein, Geehrter, das tue ich nicht. ",
-  "mn133:2.3": "Erinnerst du dich?“ "
+  "mn133:2.3": "Erinnerst du dich?“ ",
+  "mn133:2.4": "„Nein, ich auch nicht. "
 }
