Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn133_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn133_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn133_translation-de-sabbamitta.json
@@ -9,5 +9,6 @@
   "mn133:2.1": "„Mönch, erinnerst du dich an den Merksatz zum Aufsagen und die Aufgliederung über eine erlesene Nacht?“ ",
   "mn133:2.2": "„Nein, Geehrter, das tue ich nicht. ",
   "mn133:2.3": "Erinnerst du dich?“ ",
-  "mn133:2.4": "„Nein, ich auch nicht. "
+  "mn133:2.4": "„Nein, ich auch nicht. ",
+  "mn133:2.5": "Aber erinnerst du dich nur an die Strophen über eine erlesene Nacht?“ "
 }
