--- a/translation/de/sabbamitta/sutta/mn/mn133_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn133_translation-de-sabbamitta.json
@@ -14,5 +14,6 @@
   "mn133:2.6": "„Nein, das tue ich nicht. ",
   "mn133:2.7": "Erinnerst du dich?“ ",
   "mn133:2.8": "„Nein, ich auch nicht. ",
-  "mn133:2.9": "Lerne den Merksatz zum Aufsagen und die Aufgliederung über eine erlesene Nacht, Mönch, "
+  "mn133:2.9": "Lerne den Merksatz zum Aufsagen und die Aufgliederung über eine erlesene Nacht, Mönch, ",
+  "mn133:2.10": "präge sie dir ein "
 }
