Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn133_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn133_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn133_translation-de-sabbamitta.json
@@ -16,5 +16,6 @@
   "mn133:2.8": "„Nein, ich auch nicht. ",
   "mn133:2.9": "Lerne den Merksatz zum Aufsagen und die Aufgliederung über eine erlesene Nacht, Mönch, ",
   "mn133:2.10": "präge sie dir ein ",
-  "mn133:2.11": "und behalte sie. "
+  "mn133:2.11": "und behalte sie. ",
+  "mn133:2.12": "Sie sind segensreich und beziehen sich auf die Grundlagen des geistlichen Lebens.“ "
 }
