Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn133_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn133_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn133_translation-de-sabbamitta.json
@@ -18,5 +18,6 @@
   "mn133:2.10": "präge sie dir ein ",
   "mn133:2.11": "und behalte sie. ",
   "mn133:2.12": "Sie sind segensreich und beziehen sich auf die Grundlagen des geistlichen Lebens.“ ",
-  "mn133:2.13": "Das sagte diese Gottheit, "
+  "mn133:2.13": "Das sagte diese Gottheit, ",
+  "mn133:2.14": "und verschwand eben dort. "
 }
