--- a/translation/de/sabbamitta/sutta/mn/mn133_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn133_translation-de-sabbamitta.json
@@ -19,5 +19,6 @@
   "mn133:2.11": "und behalte sie. ",
   "mn133:2.12": "Sie sind segensreich und beziehen sich auf die Grundlagen des geistlichen Lebens.“ ",
   "mn133:2.13": "Das sagte diese Gottheit, ",
-  "mn133:2.14": "und verschwand eben dort. "
+  "mn133:2.14": "und verschwand eben dort. ",
+  "mn133:3.1": "Als dann die Nacht vorüber war, ging Samiddhi zum Buddha, verbeugte sich, setzte sich zur Seite hin und berichtete ihm den Vorfall. Er fügte hinzu: "
 }
