--- a/translation/de/sabbamitta/sutta/mn/mn133_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn133_translation-de-sabbamitta.json
@@ -22,5 +22,6 @@
   "mn133:2.14": "und verschwand eben dort. ",
   "mn133:3.1": "Als dann die Nacht vorüber war, ging Samiddhi zum Buddha, verbeugte sich, setzte sich zur Seite hin und berichtete ihm den Vorfall. Er fügte hinzu: ",
   "mn133:4.15": "„Herr, bitte lehre mich den Merksatz zum Aufsagen und die Aufgliederung über eine erlesene Nacht.“ ",
-  "mn133:4.16": "„Nun, Mönch, hör zu und gebrauche den Geist gut, ich werde sprechen.“ "
+  "mn133:4.16": "„Nun, Mönch, hör zu und gebrauche den Geist gut, ich werde sprechen.“ ",
+  "mn133:4.17": "„Ja, Herr“, antwortete Samiddhi. "
 }
