--- a/translation/de/sabbamitta/sutta/mn/mn133_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn133_translation-de-sabbamitta.json
@@ -24,5 +24,6 @@
   "mn133:4.15": "„Herr, bitte lehre mich den Merksatz zum Aufsagen und die Aufgliederung über eine erlesene Nacht.“ ",
   "mn133:4.16": "„Nun, Mönch, hör zu und gebrauche den Geist gut, ich werde sprechen.“ ",
   "mn133:4.17": "„Ja, Herr“, antwortete Samiddhi. ",
-  "mn133:4.18": "Der Buddha sagte: "
+  "mn133:4.18": "Der Buddha sagte: ",
+  "mn133:5.1": "„Wendet euch nicht zu Vergangenem zurück, "
 }
