Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn133_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn133_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn133_translation-de-sabbamitta.json
@@ -27,5 +27,6 @@
   "mn133:4.18": "Der Buddha sagte: ",
   "mn133:5.1": "„Wendet euch nicht zu Vergangenem zurück, ",
   "mn133:5.2": "hofft nicht auf das Künftige. ",
-  "mn133:5.3": "Was vergangen ist, wurde aufgegeben, "
+  "mn133:5.3": "Was vergangen ist, wurde aufgegeben, ",
+  "mn133:5.4": "die Zukunft ist noch nicht gekommen, "
 }
