--- a/translation/de/sabbamitta/sutta/mn/mn133_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn133_translation-de-sabbamitta.json
@@ -29,5 +29,6 @@
   "mn133:5.2": "hofft nicht auf das Künftige. ",
   "mn133:5.3": "Was vergangen ist, wurde aufgegeben, ",
   "mn133:5.4": "die Zukunft ist noch nicht gekommen, ",
-  "mn133:5.5": "und gegenwärtige Erscheinungen "
+  "mn133:5.5": "und gegenwärtige Erscheinungen ",
+  "mn133:5.6": "sieht man klar in jedem Fall. "
 }
