--- a/translation/de/sabbamitta/sutta/mn/mn133_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn133_translation-de-sabbamitta.json
@@ -31,5 +31,6 @@
   "mn133:5.4": "die Zukunft ist noch nicht gekommen, ",
   "mn133:5.5": "und gegenwärtige Erscheinungen ",
   "mn133:5.6": "sieht man klar in jedem Fall. ",
-  "mn133:5.7": "Wenn ihr das erkennt, pflegt es – "
+  "mn133:5.7": "Wenn ihr das erkennt, pflegt es – ",
+  "mn133:5.8": "ohne zu wanken, unerschütterlich. "
 }
