Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn133_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn133_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn133_translation-de-sabbamitta.json
@@ -34,5 +34,6 @@
   "mn133:5.7": "Wenn ihr das erkennt, pflegt es – ",
   "mn133:5.8": "ohne zu wanken, unerschütterlich. ",
   "mn133:5.9": "Heute ist der Tag, um sich anzustrengen; ",
-  "mn133:5.10": "wer weiß, ob morgen der Tod kommt! "
+  "mn133:5.10": "wer weiß, ob morgen der Tod kommt! ",
+  "mn133:5.11": "Denn es gibt kein Feilschen "
 }
