Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn133_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn133_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn133_translation-de-sabbamitta.json
@@ -40,5 +40,6 @@
   "mn133:5.13": "Der friedvolle Abgeklärte erklärte es: ",
   "mn133:5.14": "Die so voll Eifer meditieren, ",
   "mn133:5.15": "unermüdlich bei Tag und Nacht, ",
-  "mn133:5.16": "sie haben wahrhaftig diese eine erlesene Nacht.“ "
+  "mn133:5.16": "sie haben wahrhaftig diese eine erlesene Nacht.“ ",
+  "mn133:6.1": "Das sagte der Buddha. "
 }
