Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn133_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn133_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn133_translation-de-sabbamitta.json
@@ -41,5 +41,6 @@
   "mn133:5.14": "Die so voll Eifer meditieren, ",
   "mn133:5.15": "unermüdlich bei Tag und Nacht, ",
   "mn133:5.16": "sie haben wahrhaftig diese eine erlesene Nacht.“ ",
-  "mn133:6.1": "Das sagte der Buddha. "
+  "mn133:6.1": "Das sagte der Buddha. ",
+  "mn133:6.2": "Nachdem er geendet hatte, erhob sich der Heilige von seinem Sitz und ging zu seiner Hütte. "
 }
