Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn133_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn133_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn133_translation-de-sabbamitta.json
@@ -67,5 +67,6 @@
   "mn133:11.2": "„Ja, Geehrter“, antworteten sie. ",
   "mn133:11.3": "Der Ehrwürdige Mahākaccāna sagte: ",
   "mn133:12.1": "„Geehrte, der Buddha hat diesen kurzen Merksatz zum Aufsagen vorgestellt und ist dann zu seiner Hütte gegangen, ohne die Bedeutung ausführlich zu erklären: ",
-  "mn133:12.2": "‚Wendet euch nicht zu Vergangenem zurück … "
+  "mn133:12.2": "‚Wendet euch nicht zu Vergangenem zurück … ",
+  "mn133:12.4": "unermüdlich bei Tag und Nacht, "
 }
